# rs-clob-client

./: .gitignore  Cargo.toml  README.md
examples/: Cargo.toml  rtds_crypto_prices.rs
examples/clob/ws/: orderbook.rs  unsubscribe.rs  user.rs
examples/src/: approvals.rs  bridge.rs  check_approvals.rs  gamma.rs  rtds_crypto_prices.rs
examples/src/clob/: async.rs  authenticated.rs  aws_authenticated.rs  streaming.rs
examples/src/clob/rfq/: quotes.rs  requests.rs
examples/src/clob/ws/: unsubscribe.rs  user.rs
src/: auth.rs  types.rs
src/clob/: client.rs
src/clob/types/: request.rs  response.rs
src/clob/ws/: subscription.rs
tests/: clob.rs  websocket.rs
