[package]
name = "examples-polymarket-client-sdk"
version = "0.0.0"
edition = "2024"
rust-version = "1.88.0"
publish = false
description = "Examples demonstrating how to use the polymarket-client-sdk library"

[dependencies]
# The SDK library - using path dependency for development
polymarket-client-sdk = { path = "../", features = [
    "data",
    "gamma",
    "bridge",
    "rfq",
    "tracing",
    "ws",
    "rtds",
] }

# Runtime and async
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }

# Ethereum/alloy - only for contract examples (approvals) and AWS signer
# Most alloy types (Signer, LocalSigner, Address, etc.) are re-exported by the SDK
alloy = { version = "1.2.1", default-features = false, features = [
    "contract",
    "providers",
    "reqwest",
    "signer-aws",
] }

# AWS dependencies for KMS signer example
aws-config = "1.8.12"
aws-sdk-kms = "1.97.0"

# Error handling and utilities
anyhow = "1.0.100"
futures = "0.3.31"
futures-util = "0.3.31"
# Required at runtime for dec! macro expansion (references rust_decimal::Decimal)
rust_decimal = "1.39.0"

# Tracing/logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLOB examples
[[bin]]
name = "async"
path = "src/bin/clob/async.rs"

[[bin]]
name = "authenticated"
path = "src/bin/clob/authenticated.rs"

[[bin]]
name = "aws_authenticated"
path = "src/bin/clob/aws_authenticated.rs"

[[bin]]
name = "builder_authenticated"
path = "src/bin/clob/builder_authenticated.rs"

[[bin]]
name = "streaming"
path = "src/bin/clob/streaming.rs"

[[bin]]
name = "unauthenticated"
path = "src/bin/clob/unauthenticated.rs"

# WebSocket examples
[[bin]]
name = "websocket_orderbook"
path = "src/bin/clob/ws/orderbook.rs"

[[bin]]
name = "websocket_user"
path = "src/bin/clob/ws/user.rs"

[[bin]]
name = "websocket_unsubscribe"
path = "src/bin/clob/ws/unsubscribe.rs"

# Feature-specific examples
[[bin]]
name = "approvals"
path = "src/bin/approvals.rs"

[[bin]]
name = "check_approvals"
path = "src/bin/check_approvals.rs"

[[bin]]
name = "data"
path = "src/bin/data.rs"

[[bin]]
name = "gamma"
path = "src/bin/gamma.rs"

[[bin]]
name = "bridge"
path = "src/bin/bridge.rs"

[[bin]]
name = "rtds_crypto_prices"
path = "src/bin/rtds_crypto_prices.rs"

# RFQ examples
[[bin]]
name = "rfq_quotes"
path = "src/bin/clob/rfq/quotes.rs"

[[bin]]
name = "rfq_requests"
path = "src/bin/clob/rfq/requests.rs"

# Inherit lints from workspace
[lints]
workspace = true
