[package]
name = "polymarket-client-sdk-examples"
version = "0.0.0"
edition = "2024"
rust-version = "1.88.0"
publish = false
description = "Examples demonstrating how to use the polymarket-client-sdk library"

[dependencies]
polymarket-client-sdk = { path = "../", features = [
    "data",
    "gamma",
    "bridge",
    "rfq",
    "tracing",
    "ws",
    "rtds",
] }
alloy = { workspace = true, features = ["signer-aws", "signers"] }
anyhow = "1.0.100"
aws-config = "1.8.12"
aws-sdk-kms = "1.97.0"
futures = { workspace = true }
futures-util = "0.3.31"
rust_decimal = { version = "1.37", default-features = false }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "async"
path = "src/clob/async.rs"

[[bin]]
name = "authenticated"
path = "src/clob/authenticated.rs"

[[bin]]
name = "aws_authenticated"
path = "src/clob/aws_authenticated.rs"

[[bin]]
name = "builder_authenticated"
path = "src/clob/builder_authenticated.rs"

[[bin]]
name = "streaming"
path = "src/clob/streaming.rs"

[[bin]]
name = "unauthenticated"
path = "src/clob/unauthenticated.rs"

[[bin]]
name = "websocket_orderbook"
path = "src/clob/ws/orderbook.rs"

[[bin]]
name = "websocket_user"
path = "src/clob/ws/user.rs"

[[bin]]
name = "websocket_unsubscribe"
path = "src/clob/ws/unsubscribe.rs"

[[bin]]
name = "approvals"
path = "src/approvals.rs"

[[bin]]
name = "check_approvals"
path = "src/check_approvals.rs"

[[bin]]
name = "data"
path = "src/data.rs"

[[bin]]
name = "gamma"
path = "src/gamma.rs"

[[bin]]
name = "bridge"
path = "src/bridge.rs"

[[bin]]
name = "rtds_crypto_prices"
path = "src/rtds_crypto_prices.rs"

[[bin]]
name = "rfq_quotes"
path = "src/clob/rfq/quotes.rs"

[[bin]]
name = "rfq_requests"
path = "src/clob/rfq/requests.rs"

[lints]
workspace = true
